--- a/css/app.css
+++ b/css/app.css
@@ -12,10 +12,12 @@
 body {
       height: 100vh;
       width: 100vw;
+      overflow: hidden;
+      -webkit-overflow-scrolling: none;
 }
 
 div.container {
-      position: absolute;
+      position: relative;
       top: 0;
       left: 0;
 }
@@ -25,6 +27,19 @@ div.cvs-bg {
       position: absolute;
       top: 0;
       left: 0;
+      z-index: 2;
+}
+
+div.container div.erase {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: #ffffff;
+      border: 1px solid #000000;
+      height: 10px;
+      width: 10px;
+      display: none;
+      transition: 0s top linear, 0s left linear;
 }
 
 div.toolbar {
@@ -77,10 +92,6 @@ div.text div.img {
       background: url(../resource/app/blue/text.svg);
 }
 
-div.shapes div.img {
-      background: url(../resource/app/blue/shapes.svg);
-}
-
 div.image div.img {
       background: url(../resource/app/blue/image.svg);
 }
@@ -96,7 +107,6 @@ div.undo div.img {
 div.pointer>span.placeholder,
 div.pen>span.placeholder,
 div.text>span.placeholder,
-div.shapes>span.placeholder,
 div.image>span.placeholder,
 div.eraser>span.placeholder,
 div.undo>span.placeholder {
