--- a/css/form.css
+++ b/css/form.css
@@ -53,7 +53,7 @@ div.background {
       width: 100vw;
       position: absolute;
       z-index: -1;
-      background: #97c8af;
+      background: #3a7859;
       border-radius: 20px;
       transform: translateX(-40%) rotate(45deg);
 }
@@ -76,11 +76,26 @@ div.background {
       position: absolute;
       padding: 20px 40px;
       height: 100vh;
-      display: flex;
       left: 0px;
-      flex-direction: column;
-      justify-content: center;
       overflow: hidden;
+}
+
+div.login {
+      top: -100% !important;
+      transform: translateX(0%) !important;
+}
+
+div.container>div {
+      position: fixed;
+      top: 100%;
+      left: 7%;
+      transform: translateY(0%);
+      transition: 2s;
+}
+
+div.active {
+      top: 50% !important;
+      transform: translateY(-50%) !important;
 }
 
 img {
@@ -146,7 +161,7 @@ h1 span.black {
       width: 100%;
       padding: 15px 0;
       font-size: 18px;
-      color: #000000;
+      color: #ffffff;
 }
 
 .form-control input:focus,
@@ -173,4 +188,27 @@ h1 span.black {
 .form-control input:valid+label span {
       color: #7eb83e;
       transform: translateY(-30px);
+}
+
+@media screen and (max-width: 1000px) {
+      div.container {
+            height: 70vh;
+            width: 50vw;
+            overflow: hidden;
+            left: 50%;
+            transform: translateX(-50%);
+      }
+
+      div.background {
+            height: 70vh;
+            width: 470px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+      }
+
+      div.form.active {
+            left: 50% !important;
+            transform: translate(-50%, -50%) !important;
+      }
 }
